# Chorus

./: .env.example  .gitignore  Makefile  README.md  pyproject.toml
chorus/: __init__.py  agent.py  analyzer.py  app.py  coordinator.py  orchestra.py  synthesis.py
deploy/alibaba/: PROOF.md  provision.sh
docs/: ARCHITECTURE.md  architecture.mmd
engine/: qwen.py
web/: app.js  index.html  styles.css
